test/corpus/sequences.txt
==================
empty sequence
==================

<?xml version="1.0" encoding="UTF-8"?>
<sequence name="get_token">
</sequence>

---

(document
    (xml_declaration
        (version_info
            (version_number)
        )
        (encoding_declaration
            (encoding)
        ))
    (sequence_definition
        (name
        (identifier))
    )
)

=================
sequence with elements
==================

<?xml version="1.0" encoding="UTF-8"?>
<sequence name="get_token">
    <log level="full">
    </log>
</sequence>

---
(document
    (xml_declaration
        (version_info
            (version_number)
        )
        (encoding_declaration
            (encoding)
        ))
    (sequence_definition
        (name
        (identifier)
    )
        (mediator
            (log
                (level
                )
            )
        )
    )
)

=================
sequence with namespace
==================

<?xml version="1.0" encoding="UTF-8"?>
<sequence xmlns="http://ws.apache.org/ns/synapse" name="list_group_members">
    <log level="full">
    </log>
</sequence>

---

(document
    (xml_declaration
        (version_info
            (version_number)
        )
        (encoding_declaration
            (encoding)
        ))
    (sequence_definition
        (xmlns)
        (name
        (identifier))
        (mediator
            (log
                (level
                )
            )
        )
    )
)
