test/corpus/xml-start-tag.txt
==================
xml-start-tag
==================

<?xml version="1.0" encoding="UTF-8"?>
---

(document
    (xml_declaration
        (version_info
            (version_number)
        )
        (encoding_declaration
            (encoding)
        ))
)

==================
xml-comment
==================
<?xml version="1.0" encoding="UTF-8"?>
<!-- comment 
    <property name="value" expression="value" />
    foobar
-->
---

(document
    (xml_declaration
        (version_info
            (version_number)
        )
        (encoding_declaration
            (encoding)
        ))
    (comment)
)

